Add a navigation bar

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+  div
+    ul
+      li
+        a(href="create") Create
   body
     block content
