--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,14 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   div
+    div.p.jumbo Stock Market
     ul
       li
+        a(href="create") Create
+        a(href="create") Create
+        a(href="create") Create
+        a(href="create") Create
+        a(href="create") Create
         a(href="create") Create
   body
     block content
