Added update volume

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,10 +8,6 @@ html
     ul
       li
         a(href="create") Create
-        a(href="create") Create
-        a(href="create") Create
-        a(href="create") Create
-        a(href="create") Create
-        a(href="create") Create
+        a(href="update_volume") Update Volume
   body
     block content
