--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@ body {
 
 ul {
   display: flex;
-  background-color: #00B7FF;
+  background-color: #84dcff;
   color: grey;
   align-content: space-around;
   list-style: none;
@@ -29,7 +29,7 @@ a:hover {
 }
 
 .jumbo {
-  background-color: #eeeeee;
+  background-color: #fafafa;
   padding: 20px;
   text-transform: uppercase;
   font-size: xx-large;
@@ -51,4 +51,31 @@ a:hover {
 .input-label {
   display: block;
   padding: 10px;
+}
+
+.success {
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 10px;
+  display: block;
+  background-color: rgb(203, 255, 203);
+  color: darkgreen;
+}
+
+.alert {
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 10px;
+  display: block;
+  background-color: rgb(248, 248, 163);
+  color: rgb(219, 219, 0);
+}
+
+.failure {
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 10px;
+  display: block;
+  background-color: rgb(252, 196, 196);
+  color: red;
 }
