Add delete ticker support

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,5 +16,6 @@ html
       li
         a(href="create") Create
         a(href="update_volume") Update Volume
+        a(href="delete") Delete Stock
   body
     block content
