Implement Moving average count

--- a/views/delete.jade
+++ b/views/delete.jade
@@ -16,4 +16,4 @@ block content
       input.standard-input(type="text", name="ticker")
     br
     div.actions
-      input.standard-input(type="submit", value="Update")
+      input.standard-input(type="submit", value="Delete")
