--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,5 +17,6 @@ html
         a(href="create") Create
         a(href="update_volume") Update Volume
         a(href="delete") Delete Stock
+        a(href="moving_average_count") Moving Average Count
   body
     block content
