Add Tickers for Industry

--- a/views/delete.jade
+++ b/views/delete.jade
@@ -6,10 +6,10 @@ block content
   form.subtle(action="/market/delete", method="post")
     div.input
       span.label.input-label Username: 
-      input.standard-input(type="text", name="username")
+      input.standard-input(type="text", name="username", value="admin")
     div.input
       span.label.input-label Password: 
-      input.standard-input(type="password", name="password")
+      input.standard-input(type="password", name="password", value="adminpassword")
       br
     div.input
       span.label.input-label Ticker Symbol: 
