--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,5 +18,6 @@ html
         a(href="update_volume") Update Volume
         a(href="delete") Delete Stock
         a(href="moving_average_count") Moving Average Count
+        a(href="tickers_for_industry") Tickers for Industry
   body
     block content
