--- a/views/market_create.jade
+++ b/views/market_create.jade
@@ -12,10 +12,10 @@ block content
   form.subtle(action="/market/create", method="post")
     div.input
       span.label.input-label Username: 
-      input.standard-input(type="text", name="username")
+      input.standard-input(type="text", name="username", value="admin")
     div.input
       span.label.input-label Password: 
-      input.standard-input(type="password", name="password")
+      input.standard-input(type="password", name="password", value="adminpassword")
     div.input
       span.label.input-label Stock Data: 
       textarea.standard-input(name="stock_data", cols="40", rows="5")
