--- a/views/moving_average_count.jade
+++ b/views/moving_average_count.jade
@@ -12,10 +12,10 @@ block content
   form.subtle(action="/market/moving_average_count", method="post")
     div.input
       span.label.input-label Username: 
-      input.standard-input(type="text", name="username")
+      input.standard-input(type="text", name="username", value="regular")
     div.input
       span.label.input-label Password: 
-      input.standard-input(type="password", name="password")
+      input.standard-input(type="password", name="password", value="regularpassword")
     div.input
       span.label.input-label Low: 
       input.standard-input(type="number" name="low", value=-0.05)
