--- a/views/update_volume.jade
+++ b/views/update_volume.jade
@@ -6,11 +6,10 @@ block content
   form.subtle(action="/market/update_volume", method="post")
     div.input
       span.label.input-label Username: 
-      input.standard-input(type="text", name="username")
+      input.standard-input(type="text", name="username", value="admin")
     div.input
       span.label.input-label Password: 
-      input.standard-input(type="password", name="password")
-      br
+      input.standard-input(type="password", name="password", value="adminpassword")
     div.input
       span.label.input-label Ticker Symbol: 
       input.standard-input(type="text", name="ticker")
