Implement shares by industy

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html
         a(href="update_volume") Update Volume
         a(href="delete") Delete Stock
         a(href="moving_average_count") Moving Average Count
-        a(href="tickers_for_industry") Tickers for Industry
+        a(href="tickers_for_industry") Tickers for Industry 
+        a(href="shares_by_industry") Shares by Industry
   body
     block content
