--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,5 +20,7 @@ html
         a(href="moving_average_count") Moving Average Count
         a(href="tickers_for_industry") Tickers for Industry 
         a(href="shares_by_industry") Shares by Industry
+        a(href="summary_for_tickers") Summary for Tickers
+        a(href="top_five_stocks") Top Five Stocks
   body
     block content
